--- a/Archived/fin-agent.ipynb
+++ b/Archived/fin-agent.ipynb
@@ -28,18 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<eventregistry.EventRegistry.EventRegistry at 0x7fd7e5c30be0>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'news_client_id' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01meventregistry\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m----> 2\u001b[0m er \u001b[38;5;241m=\u001b[39m EventRegistry(apiKey \u001b[38;5;241m=\u001b[39m \u001b[43mnews_client_id\u001b[49m, allowUseOfArchive\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m er\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'news_client_id' is not defined"
+     ]
     }
    ],
    "source": [
@@ -3358,7 +3359,7 @@
   "kernelspec": {
    "display_name": "myvenv",
    "language": "python",
-   "name": "python3"
+   "name": "myvenv"
   },
   "language_info": {
    "codemirror_mode": {
