Intial commit to roberta_branch

--- a/market_intelligence_eval.ipynb
+++ b/market_intelligence_eval.ipynb
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Market Intelligence Agent Internal State"
+    "### Other Agent's Internal States"
    ]
   },
   {
@@ -207,7 +207,7 @@
     "class AllToolsEval(BaseModel):\n",
     "    passed: Annotated[list[Any], add]  # bool value for if evalution passed = all tools were called successfully\n",
     "    stats: Annotated[list[Any] , add]  # stats for each tool call, errors etc..\n",
-    "    \n",
+    "\n",
     "# Pydantic structure for model to evaluate response:\n",
     "class LLM_TopicAdherenceEval(BaseModel):\n",
     "    passed: str\n",
